# ml101

./: .gitignore  README.md  pyproject.toml
notebooks/: 00-Prerequisites.ipynb  01-BasisStatistics.ipynb  02-Regression.ipynb  03-Classificiation.ipynb  04-Clustering.ipynb  BasisStatistics.ipynb  Classificiation.ipynb  Clustering.ipynb  Regression.ipynb
