[project]
name = "ml101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.3.5",
]
